cmake_minimum_required(VERSION 3.25)
project(Coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding
        2023/12/A+B.cpp 2023/12/01packet.cpp 2023/12/leecode_温度转换.cpp 2023/12/leecode_温度转换.h "2023/12/2413. 最小偶倍数.cpp" "2023/12/2236. 判断根结点是否等于子结点之和.cpp" "2023/12/1486. 数组异或操作.cpp" "2024/1/1512. 好数对的数目.cpp" "2024/1/1534. 统计好三元组.cpp")
