cmake_minimum_required(VERSION 3.25)
project(Coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding
        2023/12/A+B.cpp 2023/12/01packet.cpp 2023/12/leecode_温度转换.cpp 2023/12/leecode_温度转换.h "2023/12/2413. 最小偶倍数.cpp" "2023/12/2236. 判断根结点是否等于子结点之和.cpp" "2023/12/1486. 数组异或操作.cpp" "2024/1/1512. 好数对的数目.cpp" "2024/1/1534. 统计好三元组.cpp" "2024/1/584. 寻找用户推荐人.cpp" "动态规划/70. 爬楼梯.cpp" "动态规划/509. 斐波那契数.cpp" "动态规划/1137. 第 N 个泰波那契数.cpp" "动态规划/746. 使用最小花费爬楼梯.cpp" "动态规划/198. 打家劫舍.cpp" "动态规划/740. 删除并获得点数.cpp" "排序/2724. 排序方式.cpp")
